docs/requirements/v5.1.1/REQUIREMENTS.md

Requirements Summary
====================

# default

## As a user, I want a default configuration for harvest included in the tool package ([#37](https://github.com/NASA-PDS/harvest/issues/37)) 


This requirement is not impacted by the current version
## As a user, I want to be able to ingest a directory of data that is not part of a bundle ([#45](https://github.com/NASA-PDS/harvest/issues/45)) 


This requirement is not impacted by the current version
## As a user, I want Harvest automatically convert date / time fields to ISO format supported by Elasticsearch ([#54](https://github.com/NASA-PDS/harvest/issues/54)) 


This requirement is not impacted by the current version
## As a user, I want to ingest the PDS4 label as JSON in a binary blob form ([#60](https://github.com/NASA-PDS/harvest/issues/60)) 


This requirement is not impacted by the current version
## As an ingest user, I want a schema to validate harvest config against ([#61](https://github.com/NASA-PDS/harvest/issues/61)) 


This requirement is not impacted by the current version
## As a user, I want to be able to see a summary of all logs messages after harvest execution completes ([#82](https://github.com/NASA-PDS/harvest/issues/82)) 


This requirement is not impacted by the current version
## As a user, I want to know when the file/label URL is not a URL ([#98](https://github.com/NASA-PDS/harvest/issues/98)) 


This requirement is not impacted by the current version
## As a Data Archivist, I want to log the successful/failed loading of a data product in a centralized location ([#117](https://github.com/NASA-PDS/harvest/issues/117)) 


This requirement is not impacted by the current version
## As a developer, I want to know what version of Harvest was used to load a product ([#119](https://github.com/NASA-PDS/harvest/issues/119)) 


This requirement is not impacted by the current version
## As a Node Operator, I want to specify an alternate file paths for 1 or more archive products ([#123](https://github.com/NASA-PDS/harvest/issues/123)) 


This requirement is not impacted by the current version
## As a user, I want to ingest data products with labels having `.lblx` file extension ([#130](https://github.com/NASA-PDS/harvest/issues/130)) 


This requirement is not impacted by the current version
## As a user, I want the default archive_status for loaded products to be configurable ([#135](https://github.com/NASA-PDS/harvest/issues/135)) 


This requirement is not impacted by the current version
## As a user, I want to define custom metadata fields ([#136](https://github.com/NASA-PDS/harvest/issues/136)) 


This requirement is not impacted by the current version
## As a Node Operator, I want to confirm which dictionaries were used ([#151](https://github.com/NASA-PDS/harvest/issues/151)) 


This requirement is not impacted by the current version
## As a developer, I want to generate the JAXB objects from the harvest config schema using maven ([#157](https://github.com/NASA-PDS/harvest/issues/157)) 


This requirement is not impacted by the current version
## As a user, I want to include my organization name in the harvest metadata (`ops:Harvest_Info.ops:node_name`) ([#187](https://github.com/NASA-PDS/harvest/issues/187)) 


This requirement is not impacted by the current version
## As a user, I don't want to insert a product which has been already inserted with the same lidvid ([#195](https://github.com/NASA-PDS/harvest/issues/195)) 


This requirement is not impacted by the current version
## As a user, I want harvest to exit with non 0 code when the arguments are not parsable ([#199](https://github.com/NASA-PDS/harvest/issues/199)) 


This requirement is not impacted by the current version
## As a person who runs harvest, I want to have the overwrite option update the url defined in the "fileRef replacePrefix" ([#215](https://github.com/NASA-PDS/harvest/issues/215)) 


This requirement is not impacted by the current version
## As a user, I want to exclude files from harvest run based upon directory path ([#218](https://github.com/NASA-PDS/harvest/issues/218)) 


This requirement is not impacted by the current version
## As a user, I want to exclude files from harvest run based upon PDS4 product class ([#219](https://github.com/NASA-PDS/harvest/issues/219)) 


This requirement is not impacted by the current version
## As a data loader, I want to know how long it took for a harvest job run ([#225](https://github.com/NASA-PDS/harvest/issues/225)) 


This requirement is not impacted by the current version
## As a user, I want to use 1+ manifest files to provide the necessary metadata for data files ([#236](https://github.com/NASA-PDS/harvest/issues/236)) 


This requirement is not impacted by the current version
## As a user, I want to provide alternate protocol URIs for accessing the data ([#237](https://github.com/NASA-PDS/harvest/issues/237)) 


This requirement is not impacted by the current version
## As a user, I want to load compressed subsets of files into the Registry ([#240](https://github.com/NASA-PDS/harvest/issues/240)) 


This requirement is not impacted by the current version
## As a data loader, I want to disable checking for adjacent source products ([#245](https://github.com/NASA-PDS/harvest/issues/245)) 


This requirement is not impacted by the current version
## As a user, I want harvest to raise an error if an attribute is not found in a local data dictionary (LDD) ([#261](https://github.com/NASA-PDS/harvest/issues/261)) 


This requirement is not impacted by the current version
## As a user, I want to ingest all XML attribute values (not PDS4 attributes) as string, by default ([#262](https://github.com/NASA-PDS/harvest/issues/262)) 


This requirement is not impacted by the current version
## harvest successfully ingests nonexistent LDD attributes when it should error out ([#292](https://github.com/NASA-PDS/harvest/issues/292)) 


This requirement is not impacted by the current version
## As a user, I want clearer per-product success/failure logging during harvest ([#322](https://github.com/NASA-PDS/harvest/issues/322)) 


This requirement is not impacted by the current version